# ComfyUI-iTools

./: .gitignore  README.md  __init__.py  iTools_nodes.py  pyproject.toml
.github/workflow/: publish_action.yml
.github/workflows/: publish.yml
backend/: checker_board.py  file_handeler.py  grid_filler.py  iserver.py  metadata_extractor.py  overlay.py  prompter.py  prompter_multi.py  shared.py
example_workflows/: PromptStyler.json
examples/: KSamplerOverlay.json  PromptRecord.json  PromptStylerExtra.json  VaePreview.json  iToolsPromptStylerExtra_workflow.json  iToolsPromptStyler_workflow.json  prompts.txt
experimental/: converters.py  experimental_nodes.py  utils.py
experimental/references/: ex1.ref
metadata/: file_handeler.py  grid_filler.py  metadata_extractor.py  overlay.py  prompter.py  prompter_multi.py  shared.py
styles/: artist.yaml  basic.yaml  camera.yaml  mood.yaml  nexus.yaml  original.yaml
styles/more examples/: 3D.yaml  All.yaml  All_flux.yaml  Art.yaml  Cartoon.yaml  (+13 more)
web/: appearance.js  compare_node.js  counter_app.js  crop_node.js  css_card_designer.js  dom_node.js  image_adjust.js  instructor.js  itools_ui.js  js_shared.js  line_loader_node.js  load_Images.js  makadi.js  miniapps.js  mixer_node.js  paint_node.js  preview_node.js  prompt_gallery.js  prompt_gallery_side.js  prompt_styler_extra.js  ragthree_widgets.js  regex_node.js  rgthree_widgets.js  smart_styler.js  test_node.js  text_entry.js  text_preview.js  topbar_menu.js  utils.js  widget_changed_callback.js  widget_changed_callback_extra.js  widget_default_values.js  widgets.js
(+20 files in other folders)
