[project]
name = "comfyui-itools"
description = "The iTools ImageLoaderPlus is an enhancement of the original ComfyUI ImageLoader node. It attempts to return the possible prompt used to create an image."
version = "0.2.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/MohammadAboulEla/ComfyUI-iTools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "makadi"
DisplayName = "ComfyUI-iTools"
Icon = ""
