[project]
name = "comfyui-itools"
description = "Whether you're a casual user or a power user, iTools provides the quality-of-life improvements you need to make your ComfyUI experience more efficient and enjoyable."
version = "0.6.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/MohammadAboulEla/ComfyUI-iTools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "makadi"
DisplayName = "ComfyUI-iTools"
Icon = ""
